# invenio-checks

./: .editorconfig  .git-blame-ignore-revs  AUTHORS.rst  CHANGES.rst  MANIFEST.in  README.rst  pyproject.toml  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: api.rst  conf.py  configuration.rst  index.rst  usage.rst
invenio_checks/: __init__.py  api.py  base.py  checks.py  components.py  config.py  ext.py  models.py  proxies.py  tasks.py  utils.py  views.py
invenio_checks/alembic/: 1742548610_create_checks_branch.py  1742549302_create_base_tables.py  1773672705_allow_empty_community_id.py  1777225247_severity_migration.py  1778685509_add_unique_constraint.py  1784902219_add_nullable_fields_target_type.py  9d47b33c7b74_add_target_type_column.py  9d47b33c7b74_add_target_type_record.py  c39b06b59667_change_datetime_types.py  e8bd906e5da8_make_checkrun_fields_nullable.py
invenio_checks/contrib/: __init__.py  async_check.py  file_formats.py
invenio_checks/contrib/metadata/: __init__.py  check.py  expressions.py  rules.py
invenio_checks/metadata/: __init__.py  check.py  example.json  expressions.py  rules.py
invenio_checks/services/: __init__.py  config.py  permissions.py  results.py  schema.py  services.py
invenio_checks/templates/semantic-ui/invenio_checks/macros/: translate.html
invenio_checks/templates/semantic-ui/invenio_checks/requests/: _checks_header.html  _rule_severity.html  async_check_tab.html  details.html  file_formats_tab.html  help_message.html  help_message_subcommunity.html  metadata_tab.html  overall_severity_level.html  severity_level_icons.html  subcommunity_tab.html
invenio_checks/translations/: messages.pot
invenio_checks/translations/en/LC_MESSAGES/: messages.po
invenio_checks/views/: __init__.py  ui.py
tests/: conftest.py  example.json  example_multilingual.json  test_alembic.py  test_invenio_checks.py
tests/contrib/file_formats/: conftest.py  test_check.py
tests/contrib/metadata/: test_expressions.py  test_rules.py
tests/metadata/: example.json  test_examples.py  test_expressions.py  test_rules.py
